Fixed responsive on mobile

--- a/scr/style/responsive.css
+++ b/scr/style/responsive.css
@@ -18,7 +18,7 @@
         content: "";
         border-bottom: 2px solid #d7d8e0;
         position: absolute;
-        top: -66px;
+        top: -126px;
         right: -110px;
         height: 200%;
         width: 767px;
@@ -34,15 +34,19 @@
         margin-bottom: 10px;
     }
     .headerButtons{
+        width: 100%;
         display: flex;
         flex-wrap: wrap;
     }
     .typeBlockItem__label{
         margin-right: 0px;
-        min-height: unset;
+        min-height: 50px;
     }
     .typeBlockItem__label:not(:last-child){
         margin-bottom: 15px;
+    }
+    .typeBlockItem__img{
+        display: none;
     }
     .insideWrapper{
         padding: 25px 34px;
@@ -69,12 +73,14 @@
         width: 100%;
     }
     .wrapperInner{
+        margin-bottom: 20px;
         flex-direction: column;
     }
     .selectDesired{
         flex-direction: column;
     }
     .selectDesired__checkboxes--label{
+        min-height: 30px;
         padding: 18px 18px;
     }
     .typeBlockItem__title{
@@ -88,9 +94,19 @@
         display: block;
         text-align: center;
         font-size: 1.5em;
+        margin-bottom: 15px;
+    }
+    .selectTypeBlock__title{
+        margin-bottom: 15px;
+        margin-top: 15px;
     }
     .selectLanguageBlock{
         text-align: center;
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .select{
         margin-right: 0px;
@@ -104,7 +120,7 @@
         margin-left: 0;
     }
     .selectLangToSecond__icon{
-        margin-right: -14px;
+        margin: 0 0 0 10px;
     }
     .fileList__tableItemTitleIcon, .fileList__tableItemTitleText{
         font-size: 14px;
@@ -117,9 +133,73 @@
     }
     .selectDocumentBlock__title{
         font-size: 1.5em;
+        width: 100%;
     }
     .selectDocumentBlock__subtitle{
         margin: unset;
+        display: block;
+        text-align: center;
+    }
+    .registerForm{
+        flex-direction: column;
+    }
+    .registerForm__Input{
+        width: 100%;
+    }
+    .selectPayType__item{
+        min-height: 100px;
+        min-width: 100%;
+    }
+    .selectPayType__item:not(:last-child) {
+        margin-right: unset;
+    }
+    .selectPayType{
+        flex-direction: column;
+    }
+    .cardInfo__item--inputNumber{
+        width: 100%;
+    }
+    .cardInfo__item:not(:last-child){
+        margin-right: unset;
+    }
+    .cardInfo{
+        flex-direction: column;
+    }
+    .registerForm__label--valid, .registerForm__label--invalid {
+        top: 44px;
+        left: 202px;
+    }
+    .cardInfo__item--inputIcon{
+        top: 48px;
+    }
+    .headerButtons .headerButtonsItem:not(:last-child), .paymentBlock__buttons--label{
+        margin-right: unset;
+        margin-bottom: 10px;
+    }
+    .tellUrgent__range{
+        width: 100%;
+    }
+    .range__text{
+        font-size: 8px;
+    }
+    .tellUrgent__timeline{
+        text-align: center;
+    }
+    .selectLanguageBlock__subtitle{
+        font-size: 15px;
+        text-align: center;
+
+    }
+    .paymentBlock__buttons{
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .selectTypeBlock{
+        margin-bottom: 20px;
+    }
+    .fileList{
+        margin-bottom: 20px;
     }
 }
 @media screen and (max-width: 1242px) {
@@ -128,5 +208,3 @@
         margin: 0;
     }
 }
-
-
